css fix for horizontal scroll from drop shadow

--- a/app/webroot/css/debug.css
+++ b/app/webroot/css/debug.css
@@ -13,6 +13,7 @@ body.test-dashboard {
 	font-family: Helvetica, Arial, sans-serif;
 	font-size: 90%;
 	margin: 0;
+	overflow-x: hidden;
 }
 
 body.test-dashboard a {
